# COP3504C

./: calculator.py  pakuri.py
labs/: calculator.py  findfour.py  pakudex.py
labs/lab10/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  memeify.cpp  memer.cpp  memer.h
labs/lab6/: CMakeLists.txt  Image.cpp  Image.h  scaler.cpp
labs/lab7/: CMakeLists.txt  Cow.cpp  Cow.h  Dragon.cpp  Dragon.h  HeiferGenerator.h  IceDragon.cpp  IceDragon.h  cowsay.cpp
projects/project1/: console_gfx.py  rle_program.py
projects/project2/: pakudex.py  pakuri.py
projects/project3/: CMakeLists.txt  main.cpp
projects/project3/output/: part1.tga  part2.tga  part3.tga  part9.tga  vroom.tga
projects/project3/src/: main.cpp  main.h
